[package]
name = "pun"
version = "0.1.0"
edition = "2021"
authors = ["Navid"]
description = "Perl version and package manager"
license = "GPL-3.0-only"

[dependencies]
flate2 = "1.0"
tar = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
rayon = "1.10"
num_cpus = "1.16"
